--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>RouteMaps </title>
 </head>
 <body>
-<div id="root"></div>
+<div class="container" id="root"></div>
 <script type="module" src="/src/main.tsx"></script>
 </body>
 </html>
